removed cardinaljs.xyz link

--- a/pages/PrivateSky/why.html
+++ b/pages/PrivateSky/why.html
@@ -29,7 +29,6 @@
         It happened that our research and development effort leaded us to build the PrivateSky programming platform.
         PrivateSky offer new approaches when doing Blockchain, MicroServices, Integration, composition of services using Executable Choreographies.
         In the blockchain area we propose the concept of Hierahical Blockchain Domains, Self Sovereign Applications to improve the DApps concept.
-        Check our pages <psk-link page="PrivateSky/main innovations" >Presenting PrivateSky innovations</psk-link>
-        As a side project we have created (<a href="https://cardinaljs.xyz">CardinalJs</a> that is  light MVC framework for building web applications using Web Components.
+        Check our page <psk-link page="PrivateSky/main innovations" >Presenting PrivateSky Innovations</psk-link>.
     </psk-chapter>
 </psk-page>
